<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_register">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="34dp"
                android:text="@string/createevent"
                android:layout_gravity="center_horizontal"
                android:textColor="@color/white"
                android:textSize="30sp"/>

            <EditText
                android:id="@+id/title"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_title"
                android:padding="10dp"
                android:singleLine="true"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/description"
                android:layout_width="fill_parent"
                android:layout_height="200dp"
                android:gravity="top"
                android:singleLine="false"
                android:maxLength="1000"
                android:inputType="textMultiLine"
                android:layout_marginBottom="20dp"
                android:background="@color/input_register_bg"
                android:hint="@string/hint_description"
                android:padding="10dp"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/location"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/input_register_bg"
                android:hint="@string/location"
                android:padding="10dp"
                android:singleLine="true"
                android:layout_marginBottom="20dp"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <EditText
                android:id="@+id/time"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:background="@color/input_register_bg"
                android:hint="Time"
                android:padding="10dp"
                android:singleLine="true"
                android:onClick="setDate"
                android:inputType="textCapWords"
                android:textColor="@color/input_register"
                android:textColorHint="@color/input_register_hint" />

            <!-- Login Button -->

            <Button
                android:id="@+id/btnsubmit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="40dp"
                android:background="#ea4c88"
                android:text="@string/btn_submit"
                android:textColor="@color/white"
                android:onClick="submitButton"/>
        </LinearLayout>

    </LinearLayout>
</ScrollView>