<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="@dimen/activity_vertical_margin"
    android:background="@color/bg_register">

    <LinearLayout
        android:id="@+id/mainlayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:padding="10dp" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical"
            android:paddingLeft="20dp"
            android:paddingRight="20dp" >

            <ImageView android:src="@drawable/logo1"
                android:layout_width="wrap_content"
                android:layout_height="72dp"
                android:layout_marginBottom="34dp"
                android:layout_gravity="center_horizontal" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:layout_gravity="center">
                <Button
                    android:id="@+id/suggestTopicConferences"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="#ea4c88"
                    android:padding="25dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/suggesttopic"
                    android:textColor="@color/white"
                    android:onClick="suggestTopicConferencesClicked"/>
                <Button
                    android:id="@+id/newsendinvitation"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="#ea4c88"
                    android:padding="25dp"
                    android:layout_marginBottom="20dp"
                    android:text="@string/newinvitation"
                    android:textColor="@color/white"
                    android:onClick="newsendinvitationClicked"/>
                <Button
                    android:id="@+id/newoldtopic"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:background="#ea4c88"
                    android:padding="25dp"
                    android:layout_marginBottom="40dp"
                    android:text="@string/newoldtopics"
                    android:textColor="@color/white"
                    android:onClick="newoldtopicClicked"/>
            </LinearLayout>

        </LinearLayout>

    </LinearLayout>
</ScrollView>